--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Daily Inspirations</title>
     <link rel="stylesheet" href="styles.css">
+    <style>
+        
+    </style>
     
 </head>
 <body>
